re PR tree-optimization/34063 (ICE: build2_stat, at tree.c:3115)

PR tree-optimization/34063
	* tree-chrec.c (chrec_evaluate): Put CHREC_LEFT based argument
	as first chrec_fold_plus operand rather than second.

	* g++.dg/tree-ssa/pr34063.C: New test.

From-SVN: r130151